[package]
name = "tom-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
color-print = "0.3.7"
csv = "1.4.0"
futures = "0.3.31"
prost = "0.14.1"
rand = "0.9.2"
tokio = {version="1.48.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
